DataApp/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-app
spec:
  selector:
    matchLabels:
      app: data-app
  template:
    metadata:
      labels:
        app: data-app
    spec:
      containers:
        - name: data
          image: test/dataapp
          imagePullPolicy: Never
          volumeMounts:
            - name: common-volume
              mountPath: /result/Resources
        - name: datahelper
          image: test/datahelperapp
          imagePullPolicy: Never
      volumes:
        - name: common-volume
          hostPath: 
            path: /common
