DataApp/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-app
spec:
  ports:
    - name: "dataappport"
      port: 8080
      targetPort: 5000
    - name: "datahelperappport"
      port: 8081
      targetPort: 5001
  selector:
    app: data-app
  type: LoadBalancer
