DataApp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /backend(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: data-app
                port:
                  number: 8081
          - path: /frontend(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: client-app
                port:
                  number: 8082
